# Android-Mem-Kit

./: .gitmodules  Cargo.toml  README.md
src/: hooking.rs  il2cpp.rs  lib.rs  memory.rs
src/bridge/: bridge.cpp
