[package]
name = "android-mem-kit"
version = "0.1.0"
edition = "2024"
description = "A comprehensive memory instrumentation library for Android rooted environments."
license = "MIT"
repository = "https://github.com/HanSo/android-mem-kit"
keywords = ["android", "memory", "hooking", "il2cpp", "instrumentation"]

[dependencies]
libc = "0.2"
obfstr = "0.4"
log = "0.4"
once_cell = "1.18"
thiserror = "1.0"

[build-dependencies]
cc = "1.0"
cmake = "0.1"
bindgen = "0.69" 
